Moving the source code files from 'src' to 'src/Common' as a first step towards separating out the platform-specific code.  This builds in MSVC 6.0 and I tried to catch all the other build systems, but I'm sure I broke *something*.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@976 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -124,35 +124,35 @@ freeglut/freeglut/progs/demos/subwin/Makefile.am -text
 freeglut/freeglut/progs/demos/subwin/subwin.c -text
 freeglut/freeglut/progs/demos/subwin/subwin.dsp -text
 freeglut/freeglut/progs/demos/subwin/subwinStatic.dsp -text
+freeglut/freeglut/src/Common/freeglut_callbacks.c -text
+freeglut/freeglut/src/Common/freeglut_cursor.c -text
+freeglut/freeglut/src/Common/freeglut_display.c -text
+freeglut/freeglut/src/Common/freeglut_ext.c -text
+freeglut/freeglut/src/Common/freeglut_font.c -text
+freeglut/freeglut/src/Common/freeglut_font_data.c -text
+freeglut/freeglut/src/Common/freeglut_gamemode.c -text
+freeglut/freeglut/src/Common/freeglut_geometry.c -text
+freeglut/freeglut/src/Common/freeglut_glutfont_definitions.c -text
+freeglut/freeglut/src/Common/freeglut_init.c -text
+freeglut/freeglut/src/Common/freeglut_input_devices.c -text
+freeglut/freeglut/src/Common/freeglut_internal.h -text
+freeglut/freeglut/src/Common/freeglut_joystick.c -text
+freeglut/freeglut/src/Common/freeglut_main.c -text
+freeglut/freeglut/src/Common/freeglut_menu.c -text
+freeglut/freeglut/src/Common/freeglut_misc.c -text
+freeglut/freeglut/src/Common/freeglut_overlay.c -text
+freeglut/freeglut/src/Common/freeglut_spaceball.c -text
+freeglut/freeglut/src/Common/freeglut_state.c -text
+freeglut/freeglut/src/Common/freeglut_stroke_mono_roman.c -text
+freeglut/freeglut/src/Common/freeglut_stroke_roman.c -text
+freeglut/freeglut/src/Common/freeglut_structure.c -text
+freeglut/freeglut/src/Common/freeglut_teapot.c -text
+freeglut/freeglut/src/Common/freeglut_teapot_data.h -text
+freeglut/freeglut/src/Common/freeglut_videoresize.c -text
+freeglut/freeglut/src/Common/freeglut_window.c -text
+freeglut/freeglut/src/Common/freeglut_xinput.c -text
+freeglut/freeglut/src/Common/freeglutdll.def -text
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_display.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_ext.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_font.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_font_data.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_glutfont_definitions.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_init.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_input_devices.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_main.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_misc.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_overlay.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_spaceball.c -text
-freeglut/freeglut/src/freeglut_state.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_stroke_mono_roman.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_stroke_roman.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_teapot_data.h svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_window.c svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/src/freeglut_xinput.c -text
-freeglut/freeglut/src/freeglutdll.def svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
 freeglut/web-src/basic_page.php svn_keywords=Author+Date+Id+Revision
