Adding empty files for platform-specific Windows and Posix/X11 code to be placed in.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@978 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -153,8 +153,36 @@ freeglut/src/Common/freeglut_window.c -text
 freeglut/src/Common/freeglut_xinput.c -text
 freeglut/src/Common/freeglutdll.def -text
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_cursor_mswin.c -text
+freeglut/src/mswin/freeglut_display_mswin.c -text
+freeglut/src/mswin/freeglut_ext_mswin.c -text
+freeglut/src/mswin/freeglut_gamemode_mswin.c -text
+freeglut/src/mswin/freeglut_init_mswin.c -text
+freeglut/src/mswin/freeglut_input_devices_mswin.c -text
+freeglut/src/mswin/freeglut_internal_mswin.h -text
+freeglut/src/mswin/freeglut_joystick_mswin.c -text
+freeglut/src/mswin/freeglut_main_mswin.c -text
+freeglut/src/mswin/freeglut_menu_mswin.c -text
+freeglut/src/mswin/freeglut_spaceball_mswin.c -text
+freeglut/src/mswin/freeglut_state_mswin.c -text
+freeglut/src/mswin/freeglut_structure_mswin.c -text
+freeglut/src/mswin/freeglut_window_mswin.c -text
 freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_cursor_x11.c -text
+freeglut/src/x11/freeglut_display_x11.c -text
+freeglut/src/x11/freeglut_ext_x11.c -text
+freeglut/src/x11/freeglut_gamemode_x11.c -text
+freeglut/src/x11/freeglut_init_x11.c -text
+freeglut/src/x11/freeglut_input_devices_x11.c -text
+freeglut/src/x11/freeglut_internal_x11.h -text
+freeglut/src/x11/freeglut_joystick_x11.c -text
+freeglut/src/x11/freeglut_main_x11.c -text
+freeglut/src/x11/freeglut_menu_x11.c -text
+freeglut/src/x11/freeglut_spaceball_x11.c -text
+freeglut/src/x11/freeglut_state_x11.c -text
+freeglut/src/x11/freeglut_structure_x11.c -text
+freeglut/src/x11/freeglut_window_x11.c -text
 web-src/basic_page.php svn_keywords=Author+Date+Id+Revision
 web-src/docs/api.php svn_keywords=Author+Date+Id+Revision
 web-src/docs/install.php svn_keywords=Author+Date+Id+Revision
