Adding a bit of documentation for MinGW that was left off the previous SVN commit
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1071 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@ freeglut/NEWS svn_keywords=Author+Date+Id+Revision
 freeglut/README svn_keywords=Author+Date+Id+Revision
 freeglut/README.cygwin_mingw -text
 freeglut/README.mac -text
+freeglut/README.mingw_cross -text
 freeglut/README.win32 svn_keywords=Author+Date+Id+Revision
 freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/VisualStudio/2008/CallbackMaker/CallbackMaker.vcproj -text
