Setting the line endings and keywords on a bunch of new text files
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1076 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,18 @@
 * text=auto !eol
 freeglut/AUTHORS svn_keywords=Author+Date+Id+Revision
-freeglut/CMakeLists.txt -text
+freeglut/CMakeLists.txt svn_keywords=Author+Date+Id+Revision
 freeglut/COPYING svn_keywords=Author+Date+Id+Revision
 freeglut/ChangeLog svn_keywords=Author+Date+Id+Revision
 freeglut/FrequentlyAskedQuestions -text
-freeglut/LISEZMOI.cygwin_mingw -text
+freeglut/LISEZMOI.cygwin_mingw svn_keywords=Author+Date+Id+Revision
 freeglut/LISEZ_MOI svn_keywords=Author+Date+Id+Revision
 freeglut/Makefile.am svn_keywords=Author+Date+Id+Revision
-freeglut/Makefile.wat -text
+freeglut/Makefile.wat svn_keywords=Author+Date+Id+Revision
 freeglut/NEWS svn_keywords=Author+Date+Id+Revision
 freeglut/README svn_keywords=Author+Date+Id+Revision
-freeglut/README.cygwin_mingw -text
+freeglut/README.cygwin_mingw svn_keywords=Author+Date+Id+Revision
 freeglut/README.mac -text
-freeglut/README.mingw_cross -text
+freeglut/README.mingw_cross svn_keywords=Author+Date+Id+Revision
 freeglut/README.win32 svn_keywords=Author+Date+Id+Revision
 freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/VisualStudio/2008/CallbackMaker/CallbackMaker.vcproj -text
@@ -48,7 +48,7 @@ freeglut/VisualStudio/2010/smooth_opengl3/smooth_opengl3.vcxproj.filters -text
 freeglut/VisualStudio/2010/subwin/subwin.vcxproj -text
 freeglut/VisualStudio/2010/subwin/subwin.vcxproj.filters -text
 freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
-freeglut/config.h.in -text
+freeglut/config.h.in svn_keywords=Author+Date+Id+Revision
 freeglut/configure.ac svn_keywords=Author+Date+Id+Revision
 freeglut/doc/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
@@ -125,65 +125,66 @@ freeglut/progs/demos/subwin/Makefile.am -text
 freeglut/progs/demos/subwin/subwin.c -text
 freeglut/progs/demos/subwin/subwin.dsp -text
 freeglut/progs/demos/subwin/subwinStatic.dsp -text
-freeglut/src/Common/freeglut_callbacks.c -text
-freeglut/src/Common/freeglut_cursor.c -text
-freeglut/src/Common/freeglut_display.c -text
-freeglut/src/Common/freeglut_ext.c -text
-freeglut/src/Common/freeglut_font.c -text
-freeglut/src/Common/freeglut_font_data.c -text
-freeglut/src/Common/freeglut_gamemode.c -text
-freeglut/src/Common/freeglut_geometry.c -text
-freeglut/src/Common/freeglut_init.c -text
-freeglut/src/Common/freeglut_input_devices.c -text
-freeglut/src/Common/freeglut_internal.h -text
-freeglut/src/Common/freeglut_joystick.c -text
-freeglut/src/Common/freeglut_main.c -text
-freeglut/src/Common/freeglut_menu.c -text
-freeglut/src/Common/freeglut_misc.c -text
-freeglut/src/Common/freeglut_overlay.c -text
-freeglut/src/Common/freeglut_spaceball.c -text
-freeglut/src/Common/freeglut_state.c -text
-freeglut/src/Common/freeglut_stroke_mono_roman.c -text
-freeglut/src/Common/freeglut_stroke_roman.c -text
-freeglut/src/Common/freeglut_structure.c -text
-freeglut/src/Common/freeglut_teapot.c -text
-freeglut/src/Common/freeglut_teapot_data.h -text
-freeglut/src/Common/freeglut_videoresize.c -text
-freeglut/src/Common/freeglut_window.c -text
-freeglut/src/Common/freeglutdll.def -text
+freeglut/src/Common/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_display.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_ext.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_font.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_font_data.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_init.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_input_devices.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_main.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_misc.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_overlay.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_spaceball.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_state.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_stroke_mono_roman.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_stroke_roman.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_teapot_data.h svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglut_window.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/Common/freeglutdll.def svn_keywords=Author+Date+Id+Revision
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
-freeglut/src/mswin/freeglut_cursor_mswin.c -text
-freeglut/src/mswin/freeglut_display_mswin.c -text
-freeglut/src/mswin/freeglut_ext_mswin.c -text
-freeglut/src/mswin/freeglut_gamemode_mswin.c -text
-freeglut/src/mswin/freeglut_init_mswin.c -text
-freeglut/src/mswin/freeglut_input_devices_mswin.c -text
-freeglut/src/mswin/freeglut_internal_mswin.h -text
-freeglut/src/mswin/freeglut_joystick_mswin.c -text
-freeglut/src/mswin/freeglut_main_mswin.c -text
-freeglut/src/mswin/freeglut_menu_mswin.c -text
-freeglut/src/mswin/freeglut_spaceball_mswin.c -text
-freeglut/src/mswin/freeglut_state_mswin.c -text
-freeglut/src/mswin/freeglut_structure_mswin.c -text
-freeglut/src/mswin/freeglut_window_mswin.c -text
+freeglut/src/mswin/freeglut_cursor_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_display_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_ext_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_gamemode_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_init_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_input_devices_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_internal_mswin.h svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_joystick_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_main_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_menu_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_spaceball_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_state_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_structure_mswin.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/mswin/freeglut_window_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
-freeglut/src/x11/freeglut_cursor_x11.c -text
-freeglut/src/x11/freeglut_display_x11.c -text
-freeglut/src/x11/freeglut_ext_x11.c -text
-freeglut/src/x11/freeglut_gamemode_x11.c -text
-freeglut/src/x11/freeglut_glutfont_definitions_x11.c -text
-freeglut/src/x11/freeglut_init_x11.c -text
-freeglut/src/x11/freeglut_input_devices_x11.c -text
-freeglut/src/x11/freeglut_internal_x11.h -text
-freeglut/src/x11/freeglut_joystick_x11.c -text
-freeglut/src/x11/freeglut_main_x11.c -text
-freeglut/src/x11/freeglut_menu_x11.c -text
-freeglut/src/x11/freeglut_spaceball_x11.c -text
-freeglut/src/x11/freeglut_state_x11.c -text
-freeglut/src/x11/freeglut_structure_x11.c -text
-freeglut/src/x11/freeglut_window_x11.c -text
-freeglut/src/x11/freeglut_xinput_x11.c -text
+freeglut/src/x11 svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_cursor_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_display_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_ext_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_gamemode_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_glutfont_definitions_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_init_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_input_devices_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_internal_x11.h svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_joystick_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_main_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_menu_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_spaceball_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_state_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_structure_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_window_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
+freeglut/src/x11/freeglut_xinput_x11.c -text svnc_svn_005fkeywords=Author+Date+Id+Revision
 web-src/basic_page.php svn_keywords=Author+Date+Id+Revision
 web-src/docs/api.php svn_keywords=Author+Date+Id+Revision
 web-src/docs/install.php svn_keywords=Author+Date+Id+Revision
