Add CMake toolchain script for mingw32/64 compilation, and update documentation
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1090 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -79,6 +79,7 @@ freeglut/freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut_std.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/mingw_cross_toolchain.cmake -text
 freeglut/freeglut/progs/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/CallbackMaker/CallbackMaker.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/CallbackMaker/CallbackMaker.dsp svn_keywords=Author+Date+Id+Revision
