Make XParseGeometry reusable by several ports (2)
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1092 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -152,6 +152,8 @@ freeglut/freeglut/src/Common/freeglut_teapot_data.h svn_keywords=Author+Date+Id+
 freeglut/freeglut/src/Common/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Common/freeglut_window.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Common/freeglutdll.def svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/Common/xparsegeometry_repl.c -text
+freeglut/freeglut/src/Common/xparsegeometry_repl.h -text
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/mswin/freeglut_cursor_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/mswin/freeglut_display_mswin.c svn_keywords=Author+Date+Id+Revision
