--- a/.gitattributes
+++ b/.gitattributes
@@ -126,6 +126,7 @@ freeglut/freeglut/progs/demos/subwin/Makefile.am -text
 freeglut/freeglut/progs/demos/subwin/subwin.c -text
 freeglut/freeglut/progs/demos/subwin/subwin.dsp -text
 freeglut/freeglut/progs/demos/subwin/subwinStatic.dsp -text
+freeglut/freeglut/progs/demos/timer/timer.c -text
 freeglut/freeglut/src/Common/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Common/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Common/freeglut_display.c svn_keywords=Author+Date+Id+Revision
