added the timer demo
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1100 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -126,6 +126,7 @@ freeglut/progs/demos/subwin/Makefile.am -text
 freeglut/progs/demos/subwin/subwin.c -text
 freeglut/progs/demos/subwin/subwin.dsp -text
 freeglut/progs/demos/subwin/subwinStatic.dsp -text
+freeglut/progs/demos/timer/timer.c -text
 freeglut/src/Common/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/Common/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/Common/freeglut_display.c svn_keywords=Author+Date+Id+Revision
