Add base Android and EGL code
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1101 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -47,6 +47,8 @@ freeglut/freeglut/VisualStudio/2010/smooth_opengl3/smooth_opengl3.vcxproj -text
 freeglut/freeglut/VisualStudio/2010/smooth_opengl3/smooth_opengl3.vcxproj.filters -text
 freeglut/freeglut/VisualStudio/2010/subwin/subwin.vcxproj -text
 freeglut/freeglut/VisualStudio/2010/subwin/subwin.vcxproj.filters -text
+freeglut/freeglut/android/Android.mk -text
+freeglut/freeglut/android/README -text
 freeglut/freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/config.h.in svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/configure.ac svn_keywords=Author+Date+Id+Revision
@@ -156,6 +158,24 @@ freeglut/freeglut/src/Common/freeglutdll.def svn_keywords=Author+Date+Id+Revisio
 freeglut/freeglut/src/Common/xparsegeometry_repl.c -text
 freeglut/freeglut/src/Common/xparsegeometry_repl.h -text
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/android/freeglut_gamemode_android.c -text
+freeglut/freeglut/src/android/freeglut_input_devices_android.c -text
+freeglut/freeglut/src/android/freeglut_internal_android.h -text
+freeglut/freeglut/src/android/freeglut_joystick_android.c -text
+freeglut/freeglut/src/android/freeglut_main_android.c -text
+freeglut/freeglut/src/android/freeglut_runtime_android.c -text
+freeglut/freeglut/src/android/freeglut_spaceball_android.c -text
+freeglut/freeglut/src/android/freeglut_state_android.c -text
+freeglut/freeglut/src/android/freeglut_window_android.c -text
+freeglut/freeglut/src/android/native_app_glue/README -text
+freeglut/freeglut/src/android/native_app_glue/android_native_app_glue.c -text
+freeglut/freeglut/src/android/native_app_glue/android_native_app_glue.h -text
+freeglut/freeglut/src/android/opengles_stubs.c -text
+freeglut/freeglut/src/egl/freeglut_display_egl.c -text
+freeglut/freeglut/src/egl/freeglut_init_egl.c -text
+freeglut/freeglut/src/egl/freeglut_internal_egl.h -text
+freeglut/freeglut/src/egl/freeglut_structure_egl.c -text
+freeglut/freeglut/src/egl/freeglut_window_egl.c -text
 freeglut/freeglut/src/mswin/freeglut_cursor_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/mswin/freeglut_display_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/mswin/freeglut_ext_mswin.c svn_keywords=Author+Date+Id+Revision
