--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ freeglut/freeglut/config.status
 freeglut/freeglut/config.sub
 freeglut/freeglut/configure
 freeglut/freeglut/configure.scan
+freeglut/freeglut/cross-android
+freeglut/freeglut/cross-woe
 freeglut/freeglut/debugfiles.list
 freeglut/freeglut/debugsources.list
 freeglut/freeglut/depcomp
@@ -29,6 +31,7 @@ freeglut/freeglut/libtool
 freeglut/freeglut/ltmain.sh
 freeglut/freeglut/man-pages
 freeglut/freeglut/missing
+freeglut/freeglut/native
 freeglut/freeglut/progs/Makefile
 freeglut/freeglut/progs/Makefile.in
 freeglut/freeglut/progs/demos/CallbackMaker/.deps
