moved common files back to src root renamed (a bunch of) the freeglut_ prefixes to fg_ did the necessary edits of the source files (I hope)
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1111 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -131,34 +131,6 @@ freeglut/progs/demos/subwin/subwin.c -text
 freeglut/progs/demos/subwin/subwin.dsp -text
 freeglut/progs/demos/subwin/subwinStatic.dsp -text
 freeglut/progs/demos/timer/timer.c -text
-freeglut/src/Common/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_display.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_ext.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_font.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_font_data.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_init.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_input_devices.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_main.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_misc.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_overlay.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_spaceball.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_state.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_stroke_mono_roman.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_stroke_roman.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_teapot_data.h svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglut_window.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/freeglutdll.def svn_keywords=Author+Date+Id+Revision
-freeglut/src/Common/xparsegeometry_repl.c -text
-freeglut/src/Common/xparsegeometry_repl.h -text
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/android/freeglut_gamemode_android.c -text
 freeglut/src/android/freeglut_input_devices_android.c -text
@@ -178,6 +150,32 @@ freeglut/src/egl/freeglut_init_egl.c -text
 freeglut/src/egl/freeglut_internal_egl.h -text
 freeglut/src/egl/freeglut_structure_egl.c -text
 freeglut/src/egl/freeglut_window_egl.c -text
+freeglut/src/fg_callbacks.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_cursor.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_display.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_ext.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_font.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_font_data.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_gamemode.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_geometry.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_init.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_input_devices.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_internal.h svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_joystick.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_main.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_menu.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_misc.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_overlay.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_spaceball.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_state.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_stroke_mono_roman.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_stroke_roman.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_structure.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_teapot.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_teapot_data.h svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_videoresize.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_window.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/freeglutdll.def svn_keywords=Author+Date+Id+Revision
 freeglut/src/mswin/freeglut_cursor_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/mswin/freeglut_display_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/mswin/freeglut_ext_mswin.c svn_keywords=Author+Date+Id+Revision
@@ -194,6 +192,8 @@ freeglut/src/mswin/freeglut_structure_mswin.c svn_keywords=Author+Date+Id+Revisi
 freeglut/src/mswin/freeglut_window_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
+freeglut/src/util/xparsegeometry_repl.c -text
+freeglut/src/util/xparsegeometry_repl.h -text
 freeglut/src/x11 svnc_svn_005fkeywords=Author+Date+Id+Revision
 freeglut/src/x11/freeglut_cursor_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
 freeglut/src/x11/freeglut_display_x11.c svnc_svn_005fkeywords=Author+Date+Id+Revision
