--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,7 @@ freeglut/freeglut/Makefile.wat svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/NEWS svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/README svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/README.android -text
+freeglut/freeglut/README.cmake -text
 freeglut/freeglut/README.cygwin_mingw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/README.mac -text
 freeglut/freeglut/README.mingw_cross svn_keywords=Author+Date+Id+Revision
