added a quick tut for using cmake, adapted from http://mash-project.eu/wiki/index.php/CMake:_Quick_Start_Guide
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1122 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,7 @@ freeglut/Makefile.wat svn_keywords=Author+Date+Id+Revision
 freeglut/NEWS svn_keywords=Author+Date+Id+Revision
 freeglut/README svn_keywords=Author+Date+Id+Revision
 freeglut/README.android -text
+freeglut/README.cmake -text
 freeglut/README.cygwin_mingw svn_keywords=Author+Date+Id+Revision
 freeglut/README.mac -text
 freeglut/README.mingw_cross svn_keywords=Author+Date+Id+Revision
