Removed VS2008 and VS2010 files set ignore for my /build directory, removed ignore for config.h.in
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1124 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ freeglut/freeglut/Makefile.in
 freeglut/freeglut/aclocal.m4
 freeglut/freeglut/autom4te.cache
 freeglut/freeglut/autoscan.log
+freeglut/freeglut/build
 freeglut/freeglut/compile
 freeglut/freeglut/config.guess
 freeglut/freeglut/config.h
-freeglut/freeglut/config.h.in
 freeglut/freeglut/config.log
 freeglut/freeglut/config.lt
 freeglut/freeglut/config.status
