Removed VS2008 and VS2010 files set ignore for my /build directory, removed ignore for config.h.in
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1124 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ freeglut/Makefile.in
 freeglut/aclocal.m4
 freeglut/autom4te.cache
 freeglut/autoscan.log
+freeglut/build
 freeglut/compile
 freeglut/config.guess
 freeglut/config.h
-freeglut/config.h.in
 freeglut/config.log
 freeglut/config.lt
 freeglut/config.status
