also added build64 to list of ignores
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1129 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ freeglut/freeglut/aclocal.m4
 freeglut/freeglut/autom4te.cache
 freeglut/freeglut/autoscan.log
 freeglut/freeglut/build
+freeglut/freeglut/build64
 freeglut/freeglut/compile
 freeglut/freeglut/config.guess
 freeglut/freeglut/config.h
