also added build64 to list of ignores
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1129 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ freeglut/aclocal.m4
 freeglut/autom4te.cache
 freeglut/autoscan.log
 freeglut/build
+freeglut/build64
 freeglut/compile
 freeglut/config.guess
 freeglut/config.h
