--- a/.gitattributes
+++ b/.gitattributes
@@ -28,7 +28,7 @@ freeglut/doc/ogl_sm.png -text
 freeglut/doc/progress.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/structure.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut.rc svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut.rc.in svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.spec svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
@@ -94,7 +94,7 @@ freeglut/src/fg_teapot.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_teapot_data.h svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_videoresize.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_window.c svn_keywords=Author+Date+Id+Revision
-freeglut/src/freeglutdll.def svn_keywords=Author+Date+Id+Revision
+freeglut/src/freeglutdll.def.in svn_keywords=Author+Date+Id+Revision
 freeglut/src/mswin/fg_cursor_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/mswin/fg_display_mswin.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/mswin/fg_ext_mswin.c svn_keywords=Author+Date+Id+Revision
