Move EGL fields to a separate structure for reusability (e.g. upcoming Mesa X11 EGL support)
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1161 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -70,6 +70,7 @@ freeglut/freeglut/src/egl/fg_init_egl.c -text
 freeglut/freeglut/src/egl/fg_internal_egl.h -text
 freeglut/freeglut/src/egl/fg_structure_egl.c -text
 freeglut/freeglut/src/egl/fg_window_egl.c -text
+freeglut/freeglut/src/egl/fg_window_egl.h -text
 freeglut/freeglut/src/fg_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/fg_cursor.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/fg_display.c svn_keywords=Author+Date+Id+Revision
