--- a/.gitattributes
+++ b/.gitattributes
@@ -70,6 +70,7 @@ freeglut/src/egl/fg_init_egl.c -text
 freeglut/src/egl/fg_internal_egl.h -text
 freeglut/src/egl/fg_structure_egl.c -text
 freeglut/src/egl/fg_window_egl.c -text
+freeglut/src/egl/fg_window_egl.h -text
 freeglut/src/fg_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_cursor.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_display.c svn_keywords=Author+Date+Id+Revision
