--- a/.gitattributes
+++ b/.gitattributes
@@ -53,6 +53,7 @@ freeglut/freeglut/progs/demos/spaceball/vmath.inl -text
 freeglut/freeglut/progs/demos/subwin/subwin.c -text
 freeglut/freeglut/progs/demos/timer/timer.c -text
 freeglut/freeglut/src/android/fg_gamemode_android.c -text
+freeglut/freeglut/src/android/fg_init_android.c -text
 freeglut/freeglut/src/android/fg_input_devices_android.c -text
 freeglut/freeglut/src/android/fg_internal_android.h -text
 freeglut/freeglut/src/android/fg_joystick_android.c -text
