EGL: make more code reusable - less Android-specific
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1174 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -53,6 +53,7 @@ freeglut/progs/demos/spaceball/vmath.inl -text
 freeglut/progs/demos/subwin/subwin.c -text
 freeglut/progs/demos/timer/timer.c -text
 freeglut/src/android/fg_gamemode_android.c -text
+freeglut/src/android/fg_init_android.c -text
 freeglut/src/android/fg_input_devices_android.c -text
 freeglut/src/android/fg_internal_android.h -text
 freeglut/src/android/fg_joystick_android.c -text
