Implement EGL fgPlatformGlutGetModeValues and partial/reusable fgPlatformGlutGet
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1183 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -69,6 +69,7 @@ freeglut/src/android/native_app_glue/android_native_app_glue.h -text
 freeglut/src/egl/fg_display_egl.c -text
 freeglut/src/egl/fg_init_egl.c -text
 freeglut/src/egl/fg_internal_egl.h -text
+freeglut/src/egl/fg_state_egl.c -text
 freeglut/src/egl/fg_structure_egl.c -text
 freeglut/src/egl/fg_structure_egl.h -text
 freeglut/src/egl/fg_window_egl.c -text
